# overgate-mono-backend

./: README.md  docker-compose.yaml
admin-panel/: Dockerfile  compose.yaml  composer.json  package-lock.json
admin-panel/app/Filament/Resources/AccessEvents/: AccessEventResource.php
admin-panel/app/Filament/Resources/AccessEvents/Pages/: CreateAccessEvent.php  EditAccessEvent.php  ListAccessEvents.php
admin-panel/app/Filament/Resources/AccessEvents/Schemas/: AccessEventForm.php
admin-panel/app/Filament/Resources/AccessEvents/Tables/: AccessEventsTable.php
admin-panel/app/Filament/Resources/Cars/: CarResource.php
admin-panel/app/Filament/Resources/Cars/Schemas/: CarForm.php
admin-panel/app/Filament/Resources/Cars/Tables/: CarsTable.php
admin-panel/app/Livewire/: AccessEventsWidget.php  LiveStreamWidget.php
admin-panel/app/Models/: AccessEvent.php  Car.php
admin-panel/app/Providers/Filament/: AdminPanelProvider.php
admin-panel/database/migrations/: 2025_10_25_224515_create_cars_table.php  2025_10_25_224640_create_access_events_table.php
admin-panel/resources/views/: landing.blade.php
admin-panel/resources/views/livewire/: live-stream-widget.blade.php
admin-panel/routes/: api.php  web.php
ml-streaming-backend/: .gitignore  Dockerfile  drawing.py  pyproject.toml  recognize.py  requirements.txt  server.py  support.py
ml-streaming-backend/probe/: face_recognition.py
sender/: log.py  pyproject.toml  stream.py
