[project]
name = "ml-streaming-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "fast-plate-ocr[onnx]>=1.0.2",
    "fastapi[all]>=0.120.0",
    "filterpy>=1.4.5",
    "httpx>=0.28.1",
    "lap>=0.5.12",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.221",
    "uvicorn[all,standart]>=0.38.0",
]
